<?xml version="1.0"?>
<package format="2">
    <name>topnav_bot_description</name>
    <version>0.0.0</version>
    <description>The topnav_bot_description package</description>

    <maintainer email="kasptom@gmail.com">kasptom</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
